--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Maycon Costa",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^7.17.1",
     "pg-hstore": "^2.3.3",
